--- a/styles/decorates.css
+++ b/styles/decorates.css
@@ -13,7 +13,7 @@
     width: 120%; 
     height: 9vw; 
     background-color: white;
-    border-radius: 1vw;
+    border-radius: 100px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
