--- a/styles/index.css
+++ b/styles/index.css
@@ -384,6 +384,12 @@ iframe {
   justify-content: space-between;
 }
 
+#stackClose{
+  width: 40px;
+  height: 40px;
+  background-color: url("../img/close.svg");
+}
+
 #stacksHeader {
   width: calc(100% - 100px);
   font-size: 3em;
